# public3/routes.ts
@@ -17,11 +17,27 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
+    "IZapatillaDB": {
+        "dataType": "refObject",
+        "properties": {
+            "idZapatilla": {"dataType":"double","required":true},
+            "idImagen": {"dataType":"double","required":true},
+            "idModelo": {"dataType":"string","required":true},
+            "idTalla": {"dataType":"double","required":true},
+            "idFactura": {"dataType":"double","required":true},
+            "precioCompra": {"dataType":"double","required":true},
+            "precioSugerido": {"dataType":"double","required":true},
+            "precioVenta": {"dataType":"double","required":true},
+            "disponibilidad": {"dataType":"double","required":true},
+            "banVendido": {"dataType":"boolean","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "IModeloDB": {
         "dataType": "refObject",
         "properties": {
-            "idModelo": {"dataType":"double","required":true},
-            "modelo": {"dataType":"string","required":true},
+            "idModelo": {"dataType":"string","required":true},
             "descripcion": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
@@ -95,6 +111,96 @@ export function RegisterRoutes(app: Router) {
 
               templateService.apiHandler({
                 methodName: 'getZapatillas',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/zapatillas/:modelo',
+            ...(fetchMiddlewares<RequestHandler>(ZapatillaController)),
+            ...(fetchMiddlewares<RequestHandler>(ZapatillaController.prototype.getZapatillasByModel)),
+
+            function ZapatillaController_getZapatillasByModel(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    modelo: {"in":"path","name":"modelo","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new ZapatillaController();
+
+              templateService.apiHandler({
+                methodName: 'getZapatillasByModel',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.post('/zapatillas',
+            ...(fetchMiddlewares<RequestHandler>(ZapatillaController)),
+            ...(fetchMiddlewares<RequestHandler>(ZapatillaController.prototype.saveZapatillas)),
+
+            function ZapatillaController_saveZapatillas(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    zapatilla: {"in":"body","name":"zapatilla","required":true,"ref":"IZapatillaDB"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new ZapatillaController();
+
+              templateService.apiHandler({
+                methodName: 'saveZapatillas',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.put('/zapatillas',
+            ...(fetchMiddlewares<RequestHandler>(ZapatillaController)),
+            ...(fetchMiddlewares<RequestHandler>(ZapatillaController.prototype.updateZapatillas)),
+
+            function ZapatillaController_updateZapatillas(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    zapatilla: {"in":"body","name":"zapatilla","required":true,"ref":"IZapatillaDB"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new ZapatillaController();
+
+              templateService.apiHandler({
+                methodName: 'updateZapatillas',
                 controller,
                 response,
                 next,
