# src/administrador-factura/domain/models/factura.repository.ts
@@ -1,0 +1,4 @@
+export interface IFacturaDb {
+  idFactura: number;
+  fechaCompra?: string;
+}
